# connect-four-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  devenv.yaml
connect-four-bevy/: CHANGELOG.md  Cargo.toml  INSTRUCTIONS.md  README.md  devenv.nix  index.html
connect-four-bevy/examples/: game_demo.rs
connect-four-bevy/src/: board.rs  buttons.rs  events.rs  game_logic.rs  lib.rs  main.rs  socket.rs  ui.rs
connect-four-lib/: Cargo.toml  README.md
connect-four-lib/src/: board.rs  errors.rs  game.rs  lib.rs  player.rs  web_socket.rs
connect-four-server/: .gitignore  Cargo.toml
connect-four-server/src/: handlers.rs  main.rs
src/: board.rs  errors.rs  game.rs
