[package]
name = "connect-four-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
rand = "0.8"
rust_socketio = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.17.0", features = ["v4"] }
connect_four_lib = { path = "../connect-four-lib" }

[[bin]]
name = "connect_four"
path = "src/main.rs"

[[example]]
name = "game_demo"
path = "examples/game_demo.rs"

# Enable fast compile times during development
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Optimize for performance in release
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
