[package]
name = "connect-four-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16", features = ["dynamic_linking"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
uuid = { version = "1.17.0", features = ["v4"] }
connect_four_lib = { path = "../connect-four-lib" }
async-channel = "2.0"
futures = "0.3.31"

[target."cfg(target_arch = \"wasm32\")".dependencies]
gloo-net = { version = "0.6.0", features = ["websocket"] }
wasm-bindgen-futures = "0.4.50"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
bevy = { version = "0.16", features = ["dynamic_linking", "wayland"] }
wayland-backend = { version = "0.1.0-beta.15" }
tokio-tungstenite = "0.27.0"
tokio = { version = "1", features = ["full"] }
bevy-tokio-tasks = "0.16"

[[bin]]
name = "connect_four"
path = "src/main.rs"

# Enable fast compile times during development
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Optimize for performance in release
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
