[package]
name = "connect-four-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.37", features = ["full"] }
tower = "0.4"
hyper = { version = "1.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
connect_four_lib = { path = "../connect-four-lib" }
