[package]
name = "connect_four_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.37", features = ["full"] }
tower = "0.4"
hyper = { version = "1.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
connect_four_lib = { path = "../connect-four-lib" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4"] }
futures-util = "0.3.31"
tower-http = { version = "0.6.6", features = ["fs"] }
